--- a/app/webroot/css/ui/toolbar.less
+++ b/app/webroot/css/ui/toolbar.less
@@ -40,6 +40,7 @@ div#toolbar {
         padding-right: 30px;
         padding-left: 30px;
         border-bottom: 1px solid #e9e9e9;
+		white-space: normal;
     }
 
     .btn-grey {
@@ -299,6 +300,7 @@ input.indexSearchBox {
             padding-right: 30px;
             padding-left: 30px;
             border-bottom: 1px solid #e9e9e9;
+			white-space: normal;
         }
 
         .btn-grey {
@@ -544,7 +546,6 @@ input.indexSearchBox {
 		bottom: 0;
 		width: auto;
 		display: inline-block;
-
 	}
 	#projCage{
 		position: relative;
